Fix issue whem timeline is not overlaping timeslots

--- a/src/components/Timeslot/Timeslot.module.css
+++ b/src/components/Timeslot/Timeslot.module.css
@@ -18,12 +18,13 @@
 }
 
 .slot {
-  position: relative;
   width: 100%;
   height: 100%;
+  padding: 0;
   border: none;
   outline-color: var(--color-primary--active);
   background-color: var(--timeslot-slot-background-color);
+  text-align: center;
   cursor: pointer;
   transition-property: background-color, outline-color;
   transition-duration: 0.3s;
@@ -42,12 +43,9 @@
 .slot:hover::after,
 .slot:focus::after,
 .slot:active::after {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   content: "";
-  display: block;
+  vertical-align: middle;
+  display: inline-block;
   width: 12px;
   height: 12px;
   background-image: url(./assets/icon__plus.svg);
